css/main.css
@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700);

body {
  padding-top: 50px;
  opacity: 0;
  font-family: 'Open Sans';
}

h1,h2,h3,h4,h5 {
	font-family: 'Open Sans';
	font-weight: 600;
}

.hideme {
	opacity: 0;
}

::selection {
	background: #fedddd;
}
::-moz-selection {
	background: #fedddd;
}

.navbar {
  background-color: #8f0000;
 }

.navbar-brand {
	text-indent: -9999px;
	height: 30px;
 	width: 30px;
 	background-image: url('../img/logo_dci_white.png');
 	background-size: 23px 30px;
 	background-position: right center;
 	background-repeat: no-repeat;
 	margin-top: 10px;
 	margin-left: 0px !important;
}

.footer-logo {
	height: 87px;
 	width: 69px;
}

 .navbar a {
 	color: #fff;
 	font-size: 14px;
 	font-family: 'Open Sans', Georgia, 'Times New Roman', Times, serif;
 }

 .nav>li>a:hover {
 	color:#fff;
 	background-color:#be0000;
 	-webkit-transition: all .3s ease; /* Fade to color for Chrome and Safari */
    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
 }

.navbar-toggle:hover {
	background-color:#be0000;
}

.navbar-toggle {
	margin-right: 8px;
}

.navbar-toggle .icon-bar {
	background-color: #fff;
}

 a {
 	color:#8f0000;
 	-webkit-transition: all .3s ease; /* Fade to color for Chrome and Safari */
    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
 }

 a:hover {
 	color:#be0000;
 }

 .jumbotron {
 	background-image: url('/img/bg_jumbotron.jpg');
 	background-position: 0px -200px;
 	color:#fff;
 }

.alert a {
	color:#3A87AD;
}

.alert a:hover {
	color:#285e8e;
}

.btn-primary {
	color: #fff;
	background-color: #8f0000;
	border-color: #8f0000;
}

.btn-primary:hover {
	background-color: #be0000;
	border-color: #8f0000;
}

.grayscale {
	opacity: .5;
    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 3.5+, IE10 */
    filter: gray; /* IE6-9 */
    -webkit-filter: grayscale(100%); /* Chrome 19+ & Safari 6+ */
    -webkit-transition: all .6s ease; /* Fade to color for Chrome and Safari */
    -webkit-backface-visibility: hidden; /* Fix for transition flickering */
}

.grayscale:hover {
	opacity:1;
    filter: none;
    -webkit-filter: grayscale(0%);
}

footer {
	border-top: 1px solid #EEE;
	margin-top: 20px;
	padding-top: 25px;
    margin-bottom: 20px;
    font-size: 11px;
    color:#777;
}

.partenaires {
	width:60%;
}

.partenaires div {
	padding:5px;
}

.partenaires .img-responsive {
    margin: auto;
}

.partners-platine img {
	height:370px;
}

.partners-or img {
	height:250px;
}

.partners-argent img {
	height:170px;
}

.partners-bronze img {
	height: 150px;
}

.social a{
	text-indent: -9999px;
	display: inline-block;
	height: 23px;
	width: 23px;
}

.partners a {
	text-indent: -9999px;
	overflow: hidden;
	display: inline-block;
	margin-left: 15px;
}

a.facebook {
	background-image:url('../img/facebook.png');
	background-size: 20px 20px;
	background-repeat: no-repeat;
	background-position: center;
}

a.twitter {
	background-image:url('../img/twitter.png');
	background-size: 20px 20px;
	background-repeat: no-repeat;
	background-position: center;
}

a.youtube {
	background-image:url('../img/youtube.png');
	background-size: 20px 20px;
	background-repeat: no-repeat;
	background-position: center;
}

a.github {
	background-image:url('../img/github.png');
	background-size: 20px 20px;
	background-repeat: no-repeat;
	background-position: center;
}

a.googleplus {
	background-image:url('../img/googleplus.png');
	background-size: 20px 20px;
	background-repeat: no-repeat;
	background-position: center;
}

a.etsmtl {
	background-image:url('../img/partenaires/ets2011.png');
	background-size: 45px 30px;
	background-repeat: no-repeat;
	background-position: center;
	height:40px;
	width:45px;
}

a.genetec {
	background-image:url('../img/partenaires/genetec-small.png');
	background-size: 155px 30px;
	background-repeat: no-repeat;
	background-position: center;
	height:40px;
	width:155px;
	text-align: left;
}

a.reseauets {
	background-image:url('../img/partenaires/reseau_ets2-small.png');
	background-size: 108px 30px;
	background-repeat: no-repeat;
	background-position: center;
	height: 40px;
	width: 108px;
	text-align: left;
}

a.iweb {
	background-image:url('../img/partenaires/iweb-small.png');
	background-size: 40px 30px;
	background-repeat: no-repeat;
	background-position: center;
	height: 40px;
	width:40px;
	text-align: left;
}

